clean-up debug stuff, use pooling.

--- a/StenchofDeath/StenchofDeath.csproj
+++ b/StenchofDeath/StenchofDeath.csproj
@@ -75,5 +75,9 @@
       <Content Include="manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <None Remove="icon.png" />
+      <Content Include="icon.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 </Project>
